--- a/src/assets/i18n/si/translation.json
+++ b/src/assets/i18n/si/translation.json
@@ -1,10 +1,36 @@
 {
-  "Layers": "Sloji",
-  "lives": "{{count}} life remaining",
-  "lives_plural": "{{count}} lives remaining",
-  "friend": "A friend",
-  "friend_male": "A boyfriend",
-  "friend_female": "A girlfriend"
+  "layers": "Seznam slojev",
+  "op-slider": "Sprememba prosojnosti",
+  "date-slider": "Sprememba datuma",
+  "min-max-slider": "Spremeni najmanjšo in največjo vrednost",
+  "preciptiation": "Padavine",
+  "logout": "Odjava",
+  "login": "Prijava",
+  "username": "Uporabniško ime",
+  "password": "Geslo",
+  "new-password": "Novo geslo",
+  "new-password-again": "Še enkrat novo geslo",
+  "old-password": "Staro geslo",
+  "profile": "Osebni podatki",
+  "email": "E-naslov",
+  "new-email": "Nov e-naslov",
+  "settings": "Nastavitve",
+  "help": "Pomoč",
+  "email-change": "Sprememba e-naslova",
+  "pass-change": "Sprememba gesla",
+  "submit": "Potrdi",
+  "register": "Nisem vpisan uporabnik",
+  "forgot-password": "Pozabil sem svoje geslo!",
+  "fb": "Glej, glej!",
+  "registration": "Vpis",
+  "first-name": "Ime",
+  "last-name": "Priimek",
+  "username": "Uporabniško ime",
+  "confirm-password": "Ponovno geslo",
+  "cancel": "Prekliči",
+  "reg-email": "E-mail, ki ste ga uporabili pri vpisu",
+  "email-is-confirmed": "Naslov je potrjen, lahko se vpišete.",
+  "confirmation-link-expired": "Veljavnost potrditvene povezave je potekla oziroma ni pravilna.",
+  "um-notification": "{{message}}",
+  "i-see": "Prav"
 }
-
-
