--- a/src/assets/i18n/en-GB/translation.json
+++ b/src/assets/i18n/en-GB/translation.json
@@ -23,7 +23,7 @@
   "forgot-password": "I forgot my password!",
   "fb": "Well, well!",
   "registration": "Register",
-  "first-name": "Forst name",
+  "first-name": "First name",
   "last-name": "Last name",
   "confirm-password": "Confirm password",
   "cancel": "Cancel",
@@ -67,5 +67,22 @@
   "results-table-profileLines-Id": "Id",
   "results-table-profileLines-Product": "Index", 
   "results-table-profileLines-Dates": "Date", 
-  "results-table-profileLines-Length": "Length"
+  "results-table-profileLines-Length": "Length",
+  "firstNameRequred": " is required",
+  "lastNameRequired": " is also required",
+  "usernameRequired": " can not be empty",
+  "emailRequired": " has to be provided",
+  "emailInvalid": " is not a valid email address",
+  "passwordRequired": " was not provided",
+  "paswordLengh": " has to be at least eight characters long",
+  "confirmPasswordRequred": " , else you can not register",
+  "confirmPasswordMatches": " does not look like the first one",
+  "zonalTSChart": "Your request for zonal time series chart is being processed. This might take a while. Please stand by for the results.",
+  "TSChart": "Your request for time series chart is being processed. We are usually quite fast with this. Please stand by for the results.",
+  "zonalStatistics": "Just a moment, statistics are being calculated.",
+  "profileLine": "Extracting values along profile. It will be delivered in a few moments.",
+  "genericBackend": "Something went wrong while processing your request and someone was notified about it! Please try again later.",
+  "featureLimitPerRequest": "You reached the feature limit for this tool. Submit your request and continue adding features.",
+  "polygonAreaTooLarge": "Area of this polygon is too large. Please draw a smaller polygon.",
+  "featureLimitPerRequestZonalTS": "You reached the feature limit for this tool. Delete the current polygon using the 'x' in the table below, draw a new polygon and submit the request."
 }
