Added language switcher dropdown to right navBar and also fixed the collapsibles in the navBar so they work as they should.

--- a/src/assets/i18n/en-GB/translation.json
+++ b/src/assets/i18n/en-GB/translation.json
@@ -14,9 +14,13 @@
   "profile": "Profile",
   "email": "Email address",
   "new-email": "New email address",
-  "settings": "Settings",
+  "user-settings": "User settings",
+  "app-settings": "Application settings",
   "help": "Help",
   "email-change": "Change email",
+  "language-change": "Change language",
+  "language-change-en": "English",
+  "language-change-slo": "Slovene",
   "pass-change": "Change password",
   "submit": "Submit",
   "register": "I would like to register",
