--- a/src/assets/i18n/sl-SI/translation.json
+++ b/src/assets/i18n/sl-SI/translation.json
@@ -14,9 +14,13 @@
   "profile": "Osebni podatki",
   "email": "E-naslov",
   "new-email": "Nov e-naslov",
-  "settings": "Nastavitve",
+  "user-settings": "Nastavitve uporabnika",
+  "app-settings": "Nastavitve vmesnika",
   "help": "Pomoč",
   "email-change": "Sprememba e-naslova",
+  "language-change": "Zamenjaj jezik",
+  "language-change-en": "Angleški",
+  "language-change-slo": "Slovenski",
   "pass-change": "Sprememba gesla",
   "submit": "Potrdi",
   "register": "Nisem vpisan uporabnik",
