--- a/src/assets/i18n/en/translation.json
+++ b/src/assets/i18n/en/translation.json
@@ -80,6 +80,7 @@
   "passwordRequired": " was not provided",
   "paswordLengh": " has to be at least eight characters long",
   "confirmPasswordRequred": " , else you can not register",
+  "confirmNewPasswordRequred": "is also required",
   "confirmPasswordMatches": " does not look like the first one",
   "zonalTSChart": "Your request for zonal time series chart is being processed. This might take a while. Please stand by for the results.",
   "TSChart": "Your request for time series chart is being processed. We are usually quite fast with this. Please stand by for the results.",
@@ -88,5 +89,18 @@
   "genericBackend": "Something went wrong while processing your request and someone was notified about it! Please try again later.",
   "featureLimitPerRequest": "You reached the feature limit for this tool. Submit your request and continue adding features.",
   "polygonAreaTooLarge": "Area of this polygon is too large. Please draw a smaller polygon.",
-  "featureLimitPerRequestZonalTS": "You reached the feature limit for this tool. Delete the current polygon using the 'x' in the table below, draw a new polygon and submit the request."
+  "featureLimitPerRequestZonalTS": "You reached the feature limit for this tool. Delete the current polygon using the 'x' in the table below, draw a new polygon and submit the request.",
+  "error-message-missing-data": "Insufficient data to signin.",
+  "error-message-500": "We encountered an error while processing your request. Our team is already working on the issue. Please try again later",
+  "error-message-user-exists": "This username is already taken, please try something else.",
+  "error-message-email-exists": "This email is already registered.",
+  "error-message-pass-mismatch": "Provided passwords do not match.",
+  "confirmation-mail-sent": "We sent an email to the address you provided. Please check your inbox and follow the instuctions in the message.",
+  "no-such-email": "We do not recognise this address.",
+  "email-not-confirmed": "This address is not confirmed yet.",
+  "user-not-exists": "We do not recognise this user name.",
+  "pass-reset-success": "Your password ws succesfully updated. Try it:)",
+  "hmmm": "You are not supposed to be here.",
+  "invalid-credentials": "These credentials do not match.",
+  "user-not-confirmed": "This user name is not confirmed yet. Please check your inbox."
 }
