--- a/src/assets/i18n/en/translation.json
+++ b/src/assets/i18n/en/translation.json
@@ -32,8 +32,8 @@
   "confirm-password": "Confirm password",
   "cancel": "Cancel",
   "reg-email": "Email you used for registration",
-  "email-is-confirmed": "Email address conformed, you can login.",
-  "confirmation-link-expired": "This conformation link has expired or is otherwise invalid.",
+  "email-is-confirmed": "Email address confirmed, you can login.",
+  "confirmation-link-expired": "This confirmation link has expired or is otherwise invalid.",
   "um-notification": "{{message}}",
   "i-see": "I see",
   "results-chart": "RESULTS CHART",
@@ -79,8 +79,8 @@
   "emailInvalid": " is not a valid email address",
   "passwordRequired": " was not provided",
   "paswordLengh": " has to be at least eight characters long",
-  "confirmPasswordRequred": " , else you can not register",
-  "confirmNewPasswordRequred": "is also required",
+  "confirmPasswordRequred": ", else you can not register",
+  "confirmNewPasswordRequred": " is also required",
   "confirmPasswordMatches": " does not look like the first one",
   "zonalTSChart": "Your request for zonal time series chart is being processed. This might take a while. Please stand by for the results.",
   "TSChart": "Your request for time series chart is being processed. We are usually quite fast with this. Please stand by for the results.",
