--- a/src/assets/i18n/sl-SI/translation.json
+++ b/src/assets/i18n/sl-SI/translation.json
@@ -44,6 +44,7 @@
   "ts-slider": "Povlecite drsnik za nastavitev drugačnga začetnega in končnega datuma",
   "ts-points": "Koordinate za izris časovnih vrst izberete na zemljevidu. Na posamezno poizvedbo lahko izberete največ 10 točk.",
   "ts-polygons": "Poligon za izris časovnih vrst narišete na zemljevidu. Na posamezno poizvedbo lahko izberete samo en poligon. Pred izbiro naslednjega poligona ga morate izbrisati iz tabele na desni. Največja površina poligona je 1000000 m",
+  "tool-parameters-and-results": "Nastavitve orodja in rezultati so prikazni na dnu strani.",
   "results-table-identifyPoints-title": "TABELA Z REZULTATI",
   "results-table-identifyPoints-Id": "Id",
   "results-table-identifyPoints-Product": "Kazalnik",
@@ -181,7 +182,7 @@
   "pp44": "Imate pravico do pritožbe pri organu za varstvo podatkov glede našega zbiranja in uporabe vaših osebnih podatkov. Za več informacij se obrnite na lokalni organ za varstvo podatkov v Evropskem gospodarskem prostoru (EGP).",
   "pp45": "Pravice do zasebnosti v Kaliforniji",
   "pp46": "Poleg pravic, kot so razložene v tej politiki, imajo prebivalci Kalifornije, ki zagotavljajo osebne podatke (kot so opredeljeni v zakonu) za pridobivanje izdelkov ali storitev za osebno, družinsko ali gospodinjsko uporabo, pravico, da enkrat v koledarskem letu od nas zahtevajo in pridobijo , informacije o osebnih podatkih, ki smo jih, če sploh, delili z drugimi podjetji za tržne namene. Po potrebi bi te informacije vključevale kategorije osebnih podatkov ter imena in naslove tistih podjetij, s katerimi smo te osebne podatke delili neposredno pred koledarskim letom (npr. Zahteve, oddane v tekočem letu, bodo prejele informacije o preteklem letu) . Za pridobitev teh informacij se obrnite na nas.",
-  "pp47": "How to exercise these rights",
+  "pp47": "Kako uveljaviti te pravice",
   "pp48": "Vse zahteve za uveljavljanje vaših pravic lahko posredujete operaterju prek kontaktnih podatkov, navedenih v tem dokumentu. Prosimo, upoštevajte, da vas bomo morda prosili, da potrdite svojo identiteto, preden odgovorite na takšne zahteve. Vaša zahteva mora vsebovati dovolj informacij, ki nam omogočajo, da potrdimo, da ste oseba, za katero trdite, da ste, ali da ste njen pooblaščeni zastopnik. Vključiti morate dovolj podrobnosti, da bomo lahko pravilno razumeli prošnjo in se nanjo odzvali. Na vašo zahtevo ne moremo odgovoriti ali vam posredovati osebnih podatkov, razen če najprej preverimo vašo identiteto ali pooblastilo za takšno zahtevo in potrdimo, da se osebni podatki nanašajo na vas.",
   "pp49": "Zasebnost otrok",
   "pp50": "Od otrok, mlajših od 18 let, zavestno ne zbiramo nobenih osebnih podatkov. Če ste mlajši od 18 let, ne posredujte osebnih podatkov prek spletnega mesta in storitev. Starše in skrbnike spodbujamo, naj spremljajo uporabo interneta svojih otrok in pomagajo uveljaviti to politiko, tako da svojim otrokom naročijo, naj osebnih podatkov nikoli ne posredujejo prek spletnega mesta in storitev brez njihovega dovoljenja. Če imate razlog za domnevo, da nam je otrok, mlajši od 18 let, posredoval osebne podatke prek spletnega mesta in storitev, se obrnite na nas. Če želite odobriti obdelavo svojih osebnih podatkov v svoji državi, morate biti stari najmanj 16 let (v nekaterih državah lahko to dovoli vaš starš ali skrbnik v vašem imenu).",
