Fixed layer loading notification by triggering preloader notification at tile load start and closing it at basemap rendercomplelte event. Removed range recalculation call from change displayed date function to ddrcrease the number of map udate calls. Also added classification and stylng specificcations to each layer .lyr file on backend to avoid first render of black layer.

--- a/src/assets/i18n/en-GB/translation.json
+++ b/src/assets/i18n/en-GB/translation.json
@@ -87,6 +87,7 @@
   "TSChart": "Your request for time series chart is being processed. We are usually quite fast with this. Please stand by for the results.",
   "zonalStatistics": "Just a moment, statistics are being calculated.",
   "loadingWMS": "Please stand by while the requested layer is loaded.",
+  "tileLoadingError": "Some tiles may not have loaded properly.",
   "profileLine": "Extracting values along profile. It will be delivered in a few moments.",
   "genericBackend": "Something went wrong while processing your request and someone was notified about it! Please try again later.",
   "featureLimitPerRequest": "You reached the feature limit for this tool. Submit your request and continue adding features.",
