--- a/src/assets/i18n/sl-SI/translation.json
+++ b/src/assets/i18n/sl-SI/translation.json
@@ -86,7 +86,8 @@
   "zonalTSChart": "Vaša zahteva za časovno vrsto poligona se obdeluje. To lahko traja nekaj časa, prosimo počakajte na rezultate.",
   "TSChart": "Vaša zahteva za časovne vrste izbranih točk se obdeluje. Navadno smo pri tem opravilu kar hitri. Prosimo počakajte na rezultate.",
   "zonalStatistics": "Samo trenutek, statistike se izračunavajo.",
-  "loadingWMS": "Prosimo počakajte, da se izbrani podatkovni sloj naloži.",
+  "loadingWMS": "Prosimo počakajte, da se izbrani podatkovni sloj naložili.",
+  "tileLoadingError": "Nekateri tilei se mogoče niso pravilno naložili.",
   "profileLine": "Pridobivamo vrednosti ob črti. To nam bo vzelo samo nekaj trenutkov.",
   "genericBackend": "Med obdelavo vaše zahteve je prišlo do napake. O tem smo nekoga obvestili. Poskusite ponovno kasneje.",
   "featureLimitPerRequest": "Dosegli ste omejite števila objektov za to orodje. Z dodajenjem boste lahko nadaljevali po potrditvi trenutne izbire.",
