--- a/src/assets/i18n/en/translation.json
+++ b/src/assets/i18n/en/translation.json
@@ -87,6 +87,7 @@
   "TSChart": "Your request for time series chart is being processed. We are usually quite fast with this. Please stand by for the results.",
   "zonalStatistics": "Just a moment, statistics are being calculated.",
   "loadingWMS": "Please stand by while the requested layer is loaded.",
+  "tileLoadingError": "Some tiles may not have loaded properly.",
   "profileLine": "Extracting values along profile. It will be delivered in a few moments.",
   "genericBackend": "Something went wrong while processing your request and someone was notified about it! Please try again later.",
   "featureLimitPerRequest": "You reached the feature limit for this tool. Submit your request and continue adding features.",
