--- a/src/assets/i18n/si/translation.json
+++ b/src/assets/i18n/si/translation.json
@@ -92,6 +92,7 @@
   "genericBackend": "Med obdelavo vaše zahteve je prišlo do napake. O tem smo nekoga obvestili. Poskusite ponovno kasneje.",
   "featureLimitPerRequest": "Dosegli ste omejite števila objektov za to orodje. Z dodajenjem boste lahko nadaljevali po potrditvi trenutne izbire.",
   "polygonAreaTooLarge": "Površina poligona je prevelika. Narišite manjši poligon.",
+  "profileLineLengthTooLong": "Črta, ki ste jo narisali je predolga. Narišite krajšo.",
   "featureLimitPerRequestZonalTS": "Dosegli ste omejite števila objektov za to orodje. Izbrišite trenutni poligon z 'X' v spodnji tabeli, narišite nov poligon in potrdite izbiro.",
   "error-message-missing-data": "Poslali ste premalo podatkov, da bi vas lahko vpisali.",
   "error-message-500": "Med obdelavo vaše zahteve je prišlo do napake. O tem smo nekoga obvestili in že dela na tem. Poskusite ponovno kasneje.",
