--- a/src/assets/i18n/sl-SI/translation.json
+++ b/src/assets/i18n/sl-SI/translation.json
@@ -86,12 +86,13 @@
   "zonalTSChart": "Vaša zahteva za časovno vrsto poligona se obdeluje. To lahko traja nekaj časa, prosimo počakajte na rezultate.",
   "TSChart": "Vaša zahteva za časovne vrste izbranih točk se obdeluje. Navadno smo pri tem opravilu kar hitri. Prosimo počakajte na rezultate.",
   "zonalStatistics": "Samo trenutek, statistike se izračunavajo.",
-  "loadingWMS": "Prosimo počakajte, da se izbrani podatkovni sloj naložili.",
+  "loadingWMS": "Prosimo počakajte, da se izbrani podatkovni sloj naloži.",
   "tileLoadingError": "Nekateri tilei se mogoče niso pravilno naložili.",
   "profileLine": "Pridobivamo vrednosti ob črti. To nam bo vzelo samo nekaj trenutkov.",
   "genericBackend": "Med obdelavo vaše zahteve je prišlo do napake. O tem smo nekoga obvestili. Poskusite ponovno kasneje.",
   "featureLimitPerRequest": "Dosegli ste omejite števila objektov za to orodje. Z dodajenjem boste lahko nadaljevali po potrditvi trenutne izbire.",
   "polygonAreaTooLarge": "Površina poligona je prevelika. Narišite manjši poligon.",
+  "profileLineLengthTooLong": "Črta, ki ste jo narisali je predolga. Narišite krajšo.",
   "featureLimitPerRequestZonalTS": "Dosegli ste omejite števila objektov za to orodje. Izbrišite trenutni poligon z 'X' v spodnji tabeli, narišite nov poligon in potrdite izbiro.",
   "error-message-missing-data": "Poslali ste premalo podatkov, da bi vas lahko vpisali.",
   "error-message-500": "Med obdelavo vaše zahteve je prišlo do napake. O tem smo nekoga obvestili in že dela na tem. Poskusite ponovno kasneje.",
